<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="2dp"
    tools:ignore="InconsistentLayout">

    <FrameLayout
        android:id="@+id/ivStatus"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/notification_status">

        <ImageView
            android:id="@+id/ivStatusRing"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_status_ring" />

        <ImageView
            android:id="@+id/ivStatusDot"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_status_dot" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/notification_recording_title"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/btnToggleFloating"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/notification_toggle_floating"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_float_on" />


    <ImageView
        android:id="@+id/btnSaveReplay"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/notif_btn_replay"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_save" />

    <ImageView
        android:id="@+id/btnStop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/notif_btn_stop"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_stop" />

</LinearLayout>
